samples/_failures_safe/1761505073_52cfd7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed4b381f.c: In function ‘main’:
./samples/SAFE/__tmp_ed4b381f.c:137:5: error: expected expression at end of input
  137 |     uint8_t sample_data2[] = {0x54, 0x65,
      |     ^~~~~~~
./samples/SAFE/__tmp_ed4b381f.c:137:5: error: expected declaration or statement at end of input
